# ccx-py

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/ccx/: __init__.py  cli.py
src/ccx/api/: __init__.py  client.py  openai_client.py  stream.py  types.py
src/ccx/compact/: __init__.py  auto.py  micro.py  tokens.py
src/ccx/config/: __init__.py  auth.py  claudemd.py  memory.py  oauth.py  settings.py
src/ccx/core/: __init__.py  agent.py  context.py  prompt.py  query.py
src/ccx/hooks/: __init__.py  runner.py
src/ccx/mcp/: __init__.py  client.py  types.py
src/ccx/permissions/: __init__.py  classifier.py  modes.py  rules.py
src/ccx/skills/: __init__.py  discover.py  executor.py  loader.py
src/ccx/tools/: __init__.py  agent_tool.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep.py  notebook_edit.py  plan_mode.py  registry.py  send_message.py  task_create.py  task_list.py  task_update.py  team_create.py  team_delete.py  todo_write.py  web_fetch.py  web_search.py
src/ccx/tui/: __init__.py  app.py  chat.py  inline_render.py  input.py  prompt.py  styles.css
tests/: conftest.py  test_agent.py  test_agent_tool.py  test_api_client.py  test_api_types.py  test_auth.py  test_compact.py  test_config.py  test_discover.py  test_mcp.py  test_notebook_edit.py  test_permissions.py  test_prompt.py  test_query_engine.py  test_skills.py  test_sse_parser.py  test_todo_write.py  test_tool_registry.py  test_tools_bash.py  test_tools_file.py  test_tools_search.py  test_web_search.py
