[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccx-py"
version = "0.1.0"
description = "CCX Python: AI coding assistant CLI. Clean-room implementation."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "textual>=3.0",
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
ccx = "ccx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ccx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
